--- a/FishFinger.html
+++ b/FishFinger.html
@@ -12,7 +12,7 @@
   <h1>Jumbo fish fingers</h1>
 
 <p> <strong>GOLDEN CRISPY BREADCRUMBS</strong></p>
-<img src="JumboFishFingers.jpg">
+<img src="JumboFishFingers.jpg" alt="Jumbo Fish Fingers">
 <p> <strong>makes</strong> 10 portions  <strong>Cooks</strong> In 25 minutes prep, plus cooking <strong> Difficulty </strong>Not too tricky </p>
 <hr>
 <h2>INGREDIENTS</h2>
@@ -44,15 +44,14 @@
 </ol>
 <hr>
 <h2>USER COMMENTS</h2>
-<form method ="get" action="process.php">
-  <fieldset style="width:400px">
-    <legend>Enter a comment:</legend>
-    <p>Name:</p>
-    <p> <input type="text"></p>
-    <p>Comment:</p>
-    <p><textarea rows="3" placeholder="Enter comments ..."></textarea></p>
-    <p><img src="PlusSign.jpg"></p>
-  </fieldset>
+<fieldset style="width:400px">
+  <legend>Enter a comment:</legend>
+  <p>Name:</p>
+  <p> <input type="text"></p>
+  <p>Comment:</p>
+  <p><textarea rows="3" placeholder="Enter comments ..."></textarea></p>
+  <p><img src="PlusSign.jpg" alt="PlusSign"></p>
+</fieldset>
 
 
 
@@ -78,7 +77,7 @@ This is my favorite recipe. I enjoy it.
     dinner <input type="radio"> 
   </fieldset>
   <p></p>
-  <button> Sign up </button>
+  <a href="mailto:alisalemkh99@gmail.com"><input type="submit" value="Sign up"> </a>
 <hr>
   <h2>Links</h2>>
   <a href="https://www.google.com/search?q=fish+fingers+recipes&oq=fish+fingers+recipes&aqs=chrome..69i57j0i19i512j0i19i22i30l8.11799j0j7&sourceid=chrome&ie=UTF-8">Search for other fish recipes </a>
